{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 64,
  "lineage": "ebac2d2a-bd23-fb79-1ee5-4b15f485e500",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb/frontendIPConfigurations/lb_public_ip_configuration",
                "load_balancer_rules": [
                  "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb/loadBalancingRules/udemy-lb-rule"
                ],
                "name": "lb_public_ip_configuration",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/publicIPAddresses/udemy-lb-public-ip"
              }
            ],
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb",
            "location": "japaneast",
            "name": "udemy-lb",
            "resource_group_name": "udemy_resource_group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb_backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/networkInterfaces/udemy_network_interface/ipConfigurations/vm_ip_configuration"
            ],
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb/backendAddressPools/udemy-lb-backend-pool",
            "load_balancing_rules": [
              "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb/loadBalancingRules/udemy-lb-rule"
            ],
            "loadbalancer_id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb",
            "name": "udemy-lb-backend-pool"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb/probes/http-running-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb/loadBalancingRules/udemy-lb-rule"
            ],
            "loadbalancer_id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb",
            "name": "http-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb/backendAddressPools/udemy-lb-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb/frontendIPConfigurations/lb_public_ip_configuration",
            "frontend_ip_configuration_name": "lb_public_ip_configuration",
            "frontend_port": 80,
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb/loadBalancingRules/udemy-lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb",
            "name": "udemy-lb-rule",
            "probe_id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb/probes/http-running-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.lb_backend_pool",
            "azurerm_lb_probe.lb_probe",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/networkInterfaces/udemy_network_interface",
            "internal_domain_name_suffix": "44ucuocyajbelgeow4bmz5hyae.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vm_ip_configuration",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/virtualNetworks/udemy_virtual_network/subnets/private"
              }
            ],
            "location": "japaneast",
            "mac_address": "60-45-BD-69-1E-B8",
            "name": "udemy_network_interface",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "udemy_resource_group",
            "virtual_machine_id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Compute/virtualMachines/udemy-vm"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "lb_backend_address_pool_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb/backendAddressPools/udemy-lb-backend-pool",
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/networkInterfaces/udemy_network_interface/ipConfigurations/vm_ip_configuration|/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/loadBalancers/udemy-lb/backendAddressPools/udemy-lb-backend-pool",
            "ip_configuration_name": "vm_ip_configuration",
            "network_interface_id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/networkInterfaces/udemy_network_interface"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.lb_backend_pool",
            "azurerm_network_interface.vm_network_interface",
            "azurerm_public_ip.lb_public_ip",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "security_group_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/networkInterfaces/udemy_network_interface|/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/networkSecurityGroups/udemy_security_group",
            "network_interface_id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/networkInterfaces/udemy_network_interface",
            "network_security_group_id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/networkSecurityGroups/udemy_security_group"
          },
          "dependencies": [
            "azurerm_network_interface.vm_network_interface",
            "azurerm_network_security_group.vm_security_group",
            "azurerm_resource_group.resource_group",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/networkSecurityGroups/udemy_security_group",
            "location": "japaneast",
            "name": "udemy_security_group",
            "resource_group_name": "udemy_resource_group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/networkSecurityGroups/udemy_security_group/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "udemy_security_group",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "udemy_resource_group",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vm_security_group",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/networkSecurityGroups/udemy_security_group/securityRules/RDP",
            "name": "RDP",
            "network_security_group_name": "udemy_security_group",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "udemy_resource_group",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vm_security_group",
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/publicIPAddresses/udemy-bastion-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.216.46.109",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "udemy-bastion-public-ip",
            "resource_group_name": "udemy_resource_group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/publicIPAddresses/udemy-lb-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.241.70.124",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "udemy-lb-public-ip",
            "resource_group_name": "udemy_resource_group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/virtualNetworks/udemy_virtual_network/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "udemy_resource_group",
            "virtual_network_name": "udemy_virtual_network"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/virtualNetworks/udemy_virtual_network/subnets/private",
            "name": "private",
            "resource_group_name": "udemy_resource_group",
            "service_endpoints": [
              "Microsoft.Sql"
            ],
            "virtual_network_name": "udemy_virtual_network"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/virtualNetworks/udemy_virtual_network/subnets/public",
            "name": "public",
            "resource_group_name": "udemy_resource_group",
            "virtual_network_name": "udemy_virtual_network"
          },
          "dependencies": [
            "azurerm_resource_group.resource_group",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "382aa8f7-0258-4542-988e-b782ccfcf804",
            "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/virtualNetworks/udemy_virtual_network",
            "location": "japaneast",
            "name": "udemy_virtual_network",
            "resource_group_name": "udemy_resource_group",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/virtualNetworks/udemy_virtual_network/subnets/public",
                "name": "public"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/virtualNetworks/udemy_virtual_network/subnets/private",
                "name": "private"
              },
              {
                "address_prefix": "10.0.3.0/27",
                "id": "/subscriptions/9819147e-88ee-45cb-9c60-d3cd02e918e8/resourceGroups/udemy_resource_group/providers/Microsoft.Network/virtualNetworks/udemy_virtual_network/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.resource_group"
          ]
        }
      ]
    }
  ]
}